Fix size of buttons by adding invisible border class

--- a/resources/public/css/_button.scss
+++ b/resources/public/css/_button.scss
@@ -111,3 +111,8 @@
     outline: none;
   }
 }
+
+.btn-invisible-border {
+  // Adds an invisible border to be the same size as outline buttons
+  border: $btn-border-width solid transparent;
+}
